fixed scrollbar issues and added badges for all music podcast in header

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ body,
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #888;
+  border-radius: 10px;
 }
 
 /* Handle on hover */
